add plan vars to update_settings
